--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # Virtual envs
 **/venv/
 **/venv_vapo/
-
 
 # User-specific stuff
 **/.idea/**/workspace.xml
@@ -61,30 +60,8 @@ out/
 # mpeltonen/sbt-idea plugin
 **/.idea_modules/
 
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Cursive Clojure plugin
-.idea/replstate.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
-
-# Editor-based Rest Client
-**/.idea/httpRequests
-
-# Android studio 3.1+ serialized cache file
-**/.idea/caches/build_file_checksums.ser
-
 # Python
 *.pyc
-
-# NumPy
-*.npy
-*.npz
 
 # Pickles
 *.pickle
@@ -125,4 +102,4 @@ dist/
 *EGl_options.o
 .mypy_cache/
 VREnv/egl_check/EGL_options.o
-datasets/playdata/*/
+
