Refactors code into object oriented form, introduces target_search first tries (commented)

--- a/config/camera_conf/cameras/tabletop_sideview.yaml
+++ b/config/camera_conf/cameras/tabletop_sideview.yaml
@@ -1,4 +1,4 @@
-_target_: vr_env.camera.static_camera.StaticCamera
+_target_: vapo.agent.static_camera.StaticCamera
 name: static
 fov: 45
 aspect: 1
