--- a/config/camera_conf/tabletop_render.yaml
+++ b/config/camera_conf/tabletop_render.yaml
@@ -1,4 +1,2 @@
 defaults:
-  - cameras@static: tabletop_sideview # tabletop_topview
-  - cameras@gripper: gripper
-  - cameras@render: tabletop_render
+  - cameras@static: tabletop_sideview
