Camera object now being instantiated correctly

--- a/config/paths/general_paths.yaml
+++ b/config/paths/general_paths.yaml
@@ -2,6 +2,7 @@ parent_folder: ../
 vapo_path: ${paths.parent_folder}/vapo_aff/
 vr_data: ${paths.vapo_path}/VREnv/data/
 scripts: ${paths.vapo_path}/scripts/
+camera_config: ${paths.vapo_path}/config/camera_conf/cameras/
 
 # Trained affordance models
 trained_models: ${paths.vapo_path}/trained_models/
