Target prediction and selection working

--- a/config/viz_affordances.yaml
+++ b/config/viz_affordances.yaml
@@ -56,6 +56,12 @@ wandb:
 
 # For visualization
 calculate_gt: False  # Calculate ground truth affordances from data in the npz files
+target_height_override: True # If flag is true, then the target selected is the highest point instead of most robust
+
+# The detected object center may not be perfectly aligned with the actual handle. Use this to
+# find the handle by depth too. Feature used on original repository on simulation mode.
+find_handle_by_depth: False
+
 out_size: 200
 save_images: False
 imshow: True
